fix list overflow scrolling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -252,7 +252,6 @@ body {
   top: 0%;
   width: 100%;
   height: 100%;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
